<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shipping Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="weightLBL">Weight of the package</string>
    <string name="ouncesLBL">(in ounces)</string>
    <string name="baseLBL">Base Cost:</string>
    <string name="addCostLBL">Added Cost:</string>
    <string name="totalLBL">Total Shipping Cost:</string>
    <string name="zero">0</string>

    <string name="zeroDec">$0.00</string>

    <string name="zero0">0.0 公分</string>
    <string name="zero1">0.0 公斤</string>
    <string name="zero2">0 歲</string>

    <string name="height">身高:</string>
    <string name="weight">體重:</string>
    <string name="age">年齡:</string>

    <string name="sex">男性</string>

    <string name="bmr">BMR:</string>
    <string name="ans"> </string>

</resources>

